--- a/.html
+++ b/.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oh My Food</title>
 </head>
 <body>
     <header>
+        <img src="images/logo-mobile.svg" alt="logo oh my food"/>
         
     </header>
 </body>
