--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Oh My Food</title>
 </head>
 <body>
     <header>
-        <img src="images/logo-mobile.svg" alt="logo oh my food"/>
-        
+        <img src="images/ohmyfood.png" alt="logo oh my food"/>
+
     </header>
 </body>
 </html>
