--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>Oh My Food</title>
 </head>
+
 <body>
     <header>
-        <img src="images/ohmyfood.png" alt="logo oh my food"/>
-
+        <img src="public/img/ohmyfood.png" alt="logo oh my food" />
     </header>
+    <div class="localisation">
+        <p>Paris, Belleville</p>
+    </div>
+    <div>
+        <h1>Réservez le menu qui vous convient</h1>
+        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+        <div>Explorer nos restaurants</div>
+    </div>
 </body>
+
 </html>
