--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,13 +18,92 @@
         <img src="public/img/ohmyfood.png" alt="logo oh my food" />
     </header>
     <div class="localisation">
+        <i class="fas fa-map-marker-alt"></i>
         <p>Paris, Belleville</p>
     </div>
-    <div>
-        <h1>Réservez le menu qui vous convient</h1>
-        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-        <div>Explorer nos restaurants</div>
+    <div class="home">
+        <div class="title-part-1">Réservez le menu qui</div>
+        <div class="title-part-2">vous convient</div>
+        <p>Découvrez des restaurants d'exception,</p>
+        <p>sélectionnés par nos soins</p>
+        <div class="btn">
+            <p>Explorer nos restaurants</p>
+        </div>
     </div>
+    <div class="functioning-filter">
+        <h2>Fonctionnement</h2>
+        <ol>
+            <li><div class="functioning-filter--icon"><i class="fas fa-mobile-alt fa-1.5x"></i></div><p>Choisissez un restaurant</p></li>
+            <li><div class="functioning-filter--icon"><i class="fas fa-list-ul"></i></div><p>Composez votre menu</p></li>
+            <li><div class="functioning-filter--icon"><i class="fas fa-store"></i></div><p>Dégustez au restaurant</p></li>
+        </ol>
+    </div>
+    <section>
+        <h2>Restaurants</h2>
+        <article>
+            <a href="page1.html" class="restaurant-prev">
+                <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
+                <div class="restaurant-prev__description">
+                    <div href="page1.html">
+                        <h3>La palette du goût</h3>
+                        <p>Ménilmontant</p>
+                    </div>
+                    <div class="heart-icon">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
+            </a>
+            <a href="page2.html" class="restaurant-prev">
+                <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
+                <div class="restaurant-prev__description">
+                    <div>
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                    </div>
+                    <div class="heart-icon">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
+            </a>
+            <a href="page3.html" class="restaurant-prev">
+                <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française" />
+                <div class="restaurant-prev__description">
+                    <div>
+                        <h3>À la française</h3>
+                        <p>Cité Rouge</p>
+                    </div>
+                    <div class="heart-icon">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
+            </a>
+            <a href="page4.html" class="restaurant-prev">
+                <img src="public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" />
+                <div class="restaurant-prev__description">
+                    <div>
+                        <h3>Le délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                    </div>
+                    <div class="heart-icon">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
+            </a>
+        </article>
+    </section>
+    <footer>
+        <h2>ohmyfoood</h2>
+        <div class="footer__flex">
+            <i class="fas fa-utensils"></i>
+            <p>Proposer un restaurant</p>
+        </div>
+        <div class="footer__flex">
+            <i class="fas fa-hands-helping"></i>
+            <p>Devenir partenaire</p>
+        </div>
+        <p>Mentions légales</p>
+        <p>Contact</p>
+    </footer>
 </body>
 
 </html>
