--- a/page1.html
+++ b/page1.html
@@ -18,5 +18,110 @@
             <img src="public/img/ohmyfood.png" alt="logo oh my food"/>
         </div>
     </header>
+    <div class="menu">
+        <div>
+            <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française"/>
+        </div>  
+        <div class="menu__description">
+            <h1>À la française</h1>
+            <div class="menu__description heart--size">
+                <i class="far fa-heart"></i>
+            </div>
+        </div>
+        <div class="menu-list">
+            <h2>ENTRÉES</h2>
+            <ul>
+                <li>
+                    <h3>Tartare de poulpe acidulé</h3>
+                    <div class="menu-list__description">
+                        <p>aux zests d'orange</p>
+                        <p>25€</p>
+                    </div>
+                </li>
+                <li>
+                    <h3>Velouté de légumes d'antan</h3>
+                    <div class="menu-list__description">
+                        <p>Carotte, panais, topinambour</p>
+                        <p>35€</p>
+                    </div>
+                </li>
+                <li>
+                    <h3>Soupe à l'oignon</h3>
+                    <div class="menu-list__description">
+                        <p>Revisitée</p>
+                        <p>20€</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="menu-list">
+            <h2>PLATS</h2>
+            <ul>
+                <li>
+                    <h3>Coquilles Saint-Jacques</h3>
+                    <div class="menu-list__description">
+                        <p>Accompagnées d'une purée de panais</p>
+                        <p>40€</p>
+                    </div>
+                </li>
+                <li>
+                    <h3>Magret de canard</h3>
+                    <div class="menu-list__description">
+                        <p>Et parmentier de pommes de terres</p>
+                        <p>35€</p>
+                    </div>
+                </li>
+                <li>
+                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                    <div class="menu-list__description">
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p>44€</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="menu-list">
+            <h2>DESSERTS</h2>
+            <ul>
+                <li>
+                    <h3>Pétales de violettes glacés</h3>
+                    <div class="menu-list__description">
+                        <p>Et purée de noisettes</p>
+                        <p>18€</p>
+                    </div>
+                </li>
+                <li>
+                    <h3>Fondant au chocolat</h3>
+                    <div class="menu-list__description">
+                        <p>Revisité</p>
+                        <p>22€</p>
+                    </div>
+                </li>
+                <li>
+                    <h3>Millefeuille croustillant</h3>
+                    <div class="menu-list__description">
+                        <p>Myrtilles et pâte d'amande</p>
+                        <p>23€</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="btn">
+            <p>Commander</p>
+        </div>
+    </div>
+    <footer>
+        <h2>ohmyfoood</h2>
+        <div class="footer__flex">
+            <i class="fas fa-utensils"></i>
+            <p>Proposer un restaurant</p>
+        </div>
+        <div class="footer__flex">
+            <i class="fas fa-hands-helping"></i>
+            <p>Devenir partenaire</p>
+        </div>
+        <p>Mentions légales</p>
+        <p>Contact</p>
+    </footer>
 </body>
 </html>
