--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <div class="title-part-2">vous convient</div>
         <p>Découvrez des restaurants d'exception,</p>
         <p>sélectionnés par nos soins</p>
-        <div class="btn">
-            <p>Explorer nos restaurants</p>
+        <div class="home-btn">
+            <div class="btn">
+                <p>Explorer nos restaurants</p>
+            </div>
         </div>
     </div>
     <div class="functioning-filter">
@@ -105,5 +107,4 @@
         <p>Contact</p>
     </footer>
 </body>
-
 </html>
