--- a/page2.html
+++ b/page2.html
@@ -20,10 +20,10 @@
     </header>
     <div class="menu">
         <div>
-            <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût"/>
+            <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée"/>
         </div>  
         <div class="menu__description">
-            <h1>La palette du goût</h1>
+            <h1>La note enchantée</h1>
             <div class="menu__description heart--size">
                 <i class="far fa-heart"></i>
             </div>
@@ -32,24 +32,31 @@
             <h2>ENTRÉES</h2>
             <ul>
                 <li>
-                    <h3>Fricassée d'escargot</h3>
+                    <h3>Raviole de foie gras</h3>
                     <div class="menu-list__description">
-                        <p>au piment d'espelette</p>
+                        <p>Accompagnés de leur crème à la truffe</p>
                         <p>25€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Foie gras de canard mi-cuit</h3>
+                    <h3>Caviar osciètre</h3>
                     <div class="menu-list__description">
-                        <p>Et ses copeaux de truffe noire</p>
+                        <p>Sur blini à la farine de blé noir</p>
                         <p>35€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Oeuf au plat</h3>
+                    <h3>Homard et espuma de potiron</h3>
                     <div class="menu-list__description">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p>Mariné aux zests d'orange</p>
                         <p>20€</p>
+                    </div>
+                </li>
+                <li>
+                    <h3>Foie gras de canard cuit entier</h3>
+                    <div class="menu-list__description">
+                        <p>Confiture de figue et pain toasté</p>
+                        <p>35€</p>
                     </div>
                 </li>
             </ul>
@@ -58,23 +65,23 @@
             <h2>PLATS</h2>
             <ul>
                 <li>
-                    <h3>Filet de boeuf aux herbes</h3>
+                    <h3>Noix de coquilles Saint-Jacques</h3>
                     <div class="menu-list__description">
-                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <p>Sur lit de purée de céleri-rave</p>
                         <p>40€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Parmentier de queue de boeuf</h3>
+                    <h3>Langoustine poêlée</h3>
                     <div class="menu-list__description">
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <p>Purée de patate douce</p>
                         <p>35€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Filtet de Turbot</h3>
+                    <h3>Mijoté de queue de boeuf</h3>
                     <div class="menu-list__description">
-                        <p>aux agrumes</p>
+                        <p>Et riz sauvage aux zests de citron</p>
                         <p>44€</p>
                     </div>
                 </li>
@@ -84,23 +91,23 @@
             <h2>DESSERTS</h2>
             <ul>
                 <li>
-                    <h3>Paris-Brest</h3>
+                    <h3>Macaron noisette et chocolat</h3>
                     <div class="menu-list__description">
-                        <p>Revisité</p>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                         <p>18€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Macaron au chocolat d'exception</h3>
+                    <h3>Baba au rhum revisité</h3>
                     <div class="menu-list__description">
-                        <p>Et glace à la vanille de Madagascar</p>
+                        <p>Avec son coulis de citron</p>
                         <p>22€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Mousse au chocolat</h3>
+                    <h3>Tarte au citron meringuée</h3>
                     <div class="menu-list__description">
-                        <p>Au piment d'espelette et à la truffe noire</p>
+                        <p>Destructurée</p>
                         <p>23€</p>
                     </div>
                 </li>
