--- a/page3.html
+++ b/page3.html
@@ -20,10 +20,10 @@
     </header>
     <div class="menu">
         <div>
-            <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût"/>
+            <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française"/>
         </div>  
         <div class="menu__description">
-            <h1>La palette du goût</h1>
+            <h1>À la française</h1>
             <div class="menu__description heart--size">
                 <i class="far fa-heart"></i>
             </div>
@@ -32,23 +32,23 @@
             <h2>ENTRÉES</h2>
             <ul>
                 <li>
-                    <h3>Fricassée d'escargot</h3>
+                    <h3>Tartare de poulpe acidulé</h3>
                     <div class="menu-list__description">
-                        <p>au piment d'espelette</p>
+                        <p>aux zests d'orange</p>
                         <p>25€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Foie gras de canard mi-cuit</h3>
+                    <h3>Velouté de légumes d'antan</h3>
                     <div class="menu-list__description">
-                        <p>Et ses copeaux de truffe noire</p>
+                        <p>Carotte, panais, topinambour</p>
                         <p>35€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Oeuf au plat</h3>
+                    <h3>Soupe à l'oignon</h3>
                     <div class="menu-list__description">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p>Revisitée</p>
                         <p>20€</p>
                     </div>
                 </li>
@@ -58,23 +58,23 @@
             <h2>PLATS</h2>
             <ul>
                 <li>
-                    <h3>Filet de boeuf aux herbes</h3>
+                    <h3>Coquilles Saint-Jacques</h3>
                     <div class="menu-list__description">
-                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <p>Accompagnées d'une purée de panais</p>
                         <p>40€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Parmentier de queue de boeuf</h3>
+                    <h3>Magret de canard</h3>
                     <div class="menu-list__description">
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <p>Et parmentier de pommes de terres</p>
                         <p>35€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Filtet de Turbot</h3>
+                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                     <div class="menu-list__description">
-                        <p>aux agrumes</p>
+                        <p>Sur son lit de gnocchis aux légumes</p>
                         <p>44€</p>
                     </div>
                 </li>
@@ -84,23 +84,23 @@
             <h2>DESSERTS</h2>
             <ul>
                 <li>
-                    <h3>Paris-Brest</h3>
+                    <h3>Pétales de violettes glacés</h3>
                     <div class="menu-list__description">
-                        <p>Revisité</p>
+                        <p>Et purée de noisettes</p>
                         <p>18€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Macaron au chocolat d'exception</h3>
+                    <h3>Fondant au chocolat</h3>
                     <div class="menu-list__description">
-                        <p>Et glace à la vanille de Madagascar</p>
+                        <p>Revisité</p>
                         <p>22€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Mousse au chocolat</h3>
+                    <h3>Millefeuille croustillant</h3>
                     <div class="menu-list__description">
-                        <p>Au piment d'espelette et à la truffe noire</p>
+                        <p>Myrtilles et pâte d'amande</p>
                         <p>23€</p>
                     </div>
                 </li>
