--- a/page4.html
+++ b/page4.html
@@ -20,10 +20,10 @@
     </header>
     <div class="menu">
         <div>
-            <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût"/>
+            <img src="public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le délice des sens"/>
         </div>  
         <div class="menu__description">
-            <h1>La palette du goût</h1>
+            <h1>Le délice des sens</h1>
             <div class="menu__description heart--size">
                 <i class="far fa-heart"></i>
             </div>
@@ -32,23 +32,23 @@
             <h2>ENTRÉES</h2>
             <ul>
                 <li>
-                    <h3>Fricassée d'escargot</h3>
+                    <h3>Tartare de thon</h3>
                     <div class="menu-list__description">
-                        <p>au piment d'espelette</p>
+                        <p>Assaisonné au yuzu</p>
                         <p>25€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Foie gras de canard mi-cuit</h3>
+                    <h3>Bouchée de homard croustillant</h3>
                     <div class="menu-list__description">
-                        <p>Et ses copeaux de truffe noire</p>
+                        <p>Et sa farandole de petits légumes</p>
                         <p>35€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Oeuf au plat</h3>
+                    <h3>Velouté de cèpes</h3>
                     <div class="menu-list__description">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p>Aux truffes</p>
                         <p>20€</p>
                     </div>
                 </li>
@@ -58,23 +58,23 @@
             <h2>PLATS</h2>
             <ul>
                 <li>
-                    <h3>Filet de boeuf aux herbes</h3>
+                    <h3>Poulet rôti aux herbes de provence</h3>
                     <div class="menu-list__description">
-                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <p>Et sa crème de truffe</p>
                         <p>40€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Parmentier de queue de boeuf</h3>
+                    <h3>Langouste rôtie</h3>
                     <div class="menu-list__description">
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <p>Et ses légumes de saison</p>
                         <p>35€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Filtet de Turbot</h3>
+                    <h3>Côte de boeuf angus</h3>
                     <div class="menu-list__description">
-                        <p>aux agrumes</p>
+                        <p>Et sa purée de panais</p>
                         <p>44€</p>
                     </div>
                 </li>
@@ -84,23 +84,23 @@
             <h2>DESSERTS</h2>
             <ul>
                 <li>
-                    <h3>Paris-Brest</h3>
+                    <h3>Farandole de desserts</h3>
                     <div class="menu-list__description">
-                        <p>Revisité</p>
+                        <p>Du chef</p>
                         <p>18€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Macaron au chocolat d'exception</h3>
+                    <h3>Crème brulée</h3>
                     <div class="menu-list__description">
-                        <p>Et glace à la vanille de Madagascar</p>
+                        <p>Revisitée</p>
                         <p>22€</p>
                     </div>
                 </li>
                 <li>
-                    <h3>Mousse au chocolat</h3>
+                    <h3>Tiramisu</h3>
                     <div class="menu-list__description">
-                        <p>Au piment d'espelette et à la truffe noire</p>
+                        <p>à la noisette</p>
                         <p>23€</p>
                     </div>
                 </li>
