--- a/page1.html
+++ b/page1.html
@@ -21,7 +21,8 @@
     <div class="menu">
         <div>
             <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût"/>
-        </div>  
+        </div> 
+    <div class="menu--background">     
         <div class="menu__description">
             <h1>La palette du goût</h1>
             <div class="menu__description heart--size">
@@ -111,6 +112,7 @@
                 <p>Commander</p>
             </div>
         </div>
+    </div>
     </div>
     <footer>
         <h2>ohmyfoood</h2>
