--- a/page2.html
+++ b/page2.html
@@ -21,7 +21,8 @@
     <div class="menu">
         <div>
             <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée"/>
-        </div>  
+        </div>
+        <div class="menu--background"> 
         <div class="menu__description">
             <h1>La note enchantée</h1>
             <div class="menu__description heart--size">
@@ -118,6 +119,7 @@
                 <p>Commander</p>
             </div>
         </div>
+    </div>
     </div>
     <footer>
         <h2>ohmyfoood</h2>
