--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,8 @@
     <div class="menu">
         <div>
             <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française"/>
-        </div>  
+        </div>
+        <div class="menu--background">  
         <div class="menu__description">
             <h1>À la française</h1>
             <div class="menu__description heart--size">
@@ -111,6 +112,7 @@
                 <p>Commander</p>
             </div>
         </div>
+    </div>
     </div>
     <footer>
         <h2>ohmyfoood</h2>
