--- a/index.html
+++ b/index.html
@@ -17,32 +17,47 @@
     <header>
         <img src="public/img/ohmyfood.png" alt="logo oh my food" />
     </header>
-    <div class="localisation">
-        <i class="fas fa-map-marker-alt"></i>
-        <p>Paris, Belleville</p>
-    </div>
-    <div class="home">
-        <div class="title-part-1">Réservez le menu qui</div>
-        <div class="title-part-2">vous convient</div>
-        <p>Découvrez des restaurants d'exception,</p>
-        <p>sélectionnés par nos soins</p>
-        <div class="home-btn">
-            <div class="btn">
-                <p>Explorer nos restaurants</p>
+            <div class="flex-home-desktop-tablet">
+                <div class="localisation">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Paris, Belleville</p>
+                </div>
+                <div class="home">
+                    <div class="title-part-1">Réservez le menu qui</div>
+                    <div class="title-part-2">vous convient</div>
+                    <p>Découvrez des restaurants d'exception,</p>
+                    <p>sélectionnés par nos soins</p>
+                    <div class="home-btn">
+                        <div class="btn">
+                            <p>Explorer nos restaurants</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="functioning-filter">
-        <h2>Fonctionnement</h2>
-        <ol>
-            <li><div class="functioning-filter--icon"><i class="fas fa-mobile-alt fa-1.5x"></i></div><p>Choisissez un restaurant</p></li>
-            <li><div class="functioning-filter--icon"><i class="fas fa-list-ul"></i></div><p>Composez votre menu</p></li>
-            <li><div class="functioning-filter--icon"><i class="fas fa-store"></i></div><p>Dégustez au restaurant</p></li>
-        </ol>
-    </div>
+            <div class="functioning-filter">
+                <h2>Fonctionnement</h2>
+                    <ol>
+                        <li><div class="functioning-filter--icon">
+                                <i class="fas fa-mobile-alt fa-1.5x"></i>
+                            </div>
+                            <p>Choisissez un restaurant</p>
+                        </li>
+                        <li><div class="functioning-filter--icon">
+                                <i class="fas fa-list-ul"></i>
+                            </div>
+                            <p>Composez votre menu</p>
+                        </li>
+                        <li><div class="functioning-filter--icon">
+                                <i class="fas fa-store"></i>
+                            </div>
+                            <p>Dégustez au restaurant</p>
+                        </li>
+                    </ol>
+            </div>
     <section>
         <h2>Restaurants</h2>
         <article>
+            
             <a href="page1.html" class="restaurant-prev">
                 <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
                 <div class="restaurant-prev__description">
