--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <section>
         <h2>Restaurants</h2>
         <article>
-            
             <a href="page1.html" class="restaurant-prev">
+                <span>Nouveau</span>
                 <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
                 <div class="restaurant-prev__description">
                     <div href="page1.html">
@@ -71,6 +71,7 @@
                 </div>
             </a>
             <a href="page2.html" class="restaurant-prev">
+                <span>Nouveau</span>
                 <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
                 <div class="restaurant-prev__description">
                     <div>
