--- a/index.html
+++ b/index.html
@@ -57,56 +57,64 @@
     <section>
         <h2>Restaurants</h2>
         <article>
-            <a href="page1.html" class="restaurant-prev">
-                <span>Nouveau</span>
-                <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
-                <div class="restaurant-prev__description">
-                    <div href="page1.html">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                    </div>
-                    <div class="heart-icon">
-                        <i class="far fa-heart"></i>
-                    </div>
+            <div class="flex-card-tablet-and-desktop">
+                <div class="flex-card">
+                    <a href="page1.html" class="restaurant-prev">
+                        <span>Nouveau</span>
+                        <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
+                        <div class="restaurant-prev__description">
+                            <div href="page1.html">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <div class="heart-icon">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </a>
-            <a href="page2.html" class="restaurant-prev">
-                <span>Nouveau</span>
-                <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
-                <div class="restaurant-prev__description">
-                    <div>
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
+                <a href="page2.html" class="restaurant-prev">
+                    <span>Nouveau</span>
+                    <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
+                    <div class="restaurant-prev__description">
+                        <div>
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <div class="heart-icon">
+                            <i class="far fa-heart"></i>
+                        </div>
                     </div>
-                    <div class="heart-icon">
-                        <i class="far fa-heart"></i>
-                    </div>
+                </a>
+            </div>
+            <div class="flex-card-tablet-and-desktop">
+                <div class="flex-card">
+                    <a href="page3.html" class="restaurant-prev">
+                        <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française" />
+                        <div class="restaurant-prev__description">
+                            <div>
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <div class="heart-icon">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </a>
-            <a href="page3.html" class="restaurant-prev">
-                <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française" />
-                <div class="restaurant-prev__description">
-                    <div>
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
+                <a href="page4.html" class="restaurant-prev">
+                    <img src="public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" />
+                    <div class="restaurant-prev__description">
+                        <div>
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <div class="heart-icon">
+                            <i class="far fa-heart"></i>
+                        </div>
                     </div>
-                    <div class="heart-icon">
-                        <i class="far fa-heart"></i>
-                    </div>
-                </div>
-            </a>
-            <a href="page4.html" class="restaurant-prev">
-                <img src="public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" />
-                <div class="restaurant-prev__description">
-                    <div>
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
-                    </div>
-                    <div class="heart-icon">
-                        <i class="far fa-heart"></i>
-                    </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </article>
     </section>
     <footer>
