--- a/page2.html
+++ b/page2.html
@@ -33,32 +33,52 @@
             <h2>ENTRÉES</h2>
             <ul>
                 <li>
-                    <h3>Raviole de foie gras</h3>
-                    <div class="menu-list__description">
-                        <p>Accompagnés de leur crème à la truffe</p>
-                        <p>25€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Raviole de foie gras</h3>
+                            <div class="description">
+                                <p>Accompagnés de leur crème à la truffe</p>
+                                <p class=price>25€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Caviar osciètre</h3>
-                    <div class="menu-list__description">
-                        <p>Sur blini à la farine de blé noir</p>
-                        <p>35€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Caviar osciètre</h3>
+                            <div class="description">
+                                <p>Sur blini à la farine de blé noir</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Homard et espuma de potiron</h3>
-                    <div class="menu-list__description">
-                        <p>Mariné aux zests d'orange</p>
-                        <p>20€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Homard et espuma de potiron</h3>
+                            <div class="description">
+                                <p>Mariné aux zests d'orange</p>
+                                <p class="price">20€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Foie gras de canard cuit entier</h3>
-                    <div class="menu-list__description">
-                        <p>Confiture de figue et pain toasté</p>
-                        <p>35€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <div class="description">
+                                <p>Confiture de figue et pain toasté</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -66,25 +86,40 @@
             <h2>PLATS</h2>
             <ul>
                 <li>
-                    <h3>Noix de coquilles Saint-Jacques</h3>
-                    <div class="menu-list__description">
-                        <p>Sur lit de purée de céleri-rave</p>
-                        <p>40€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <div class="description">
+                                <p>Sur lit de purée de céleri-rave</p>
+                                <p class="price">40€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Langoustine poêlée</h3>
-                    <div class="menu-list__description">
-                        <p>Purée de patate douce</p>
-                        <p>35€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Langoustine poêlée</h3>
+                            <div class="description">
+                                <p>Purée de patate douce</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Mijoté de queue de boeuf</h3>
-                    <div class="menu-list__description">
-                        <p>Et riz sauvage aux zests de citron</p>
-                        <p>44€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Mijoté de queue de boeuf</h3>
+                            <div class="description">
+                                <p>Et riz sauvage aux zests de citron</p>
+                                <p class="price">44€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -92,33 +127,50 @@
             <h2>DESSERTS</h2>
             <ul>
                 <li>
-                    <h3>Macaron noisette et chocolat</h3>
-                    <div class="menu-list__description">
-                        <p>Glace au caramel brun et sel de Guérande</p>
-                        <p>18€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Macaron noisette et chocolat</h3>
+                            <div class="description">
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                                <p class="price">18€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Baba au rhum revisité</h3>
+                    <a>
                     <div class="menu-list__description">
-                        <p>Avec son coulis de citron</p>
-                        <p>22€</p>
+                        <h3>Baba au rhum revisité</h3>
+                        <div class="description">
+                            <p>Avec son coulis de citron</p>
+                            <p class="price">22€</p>
+                        </div>
                     </div>
+                    <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Tarte au citron meringuée</h3>
-                    <div class="menu-list__description">
-                        <p>Destructurée</p>
-                        <p>23€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Tarte au citron meringuée</h3>
+                            <div class="description">
+                                <p>Destructurée</p>
+                                <p class="price">23€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
-        <div class="page-btn">
-            <div class="btn">
-                <p>Commander</p>
+        <a href="#">
+            <div class="page-btn">
+                <div class="btn">
+                    <p>Commander</p>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
     </div>
     <footer>
