--- a/page1.html
+++ b/page1.html
@@ -33,25 +33,40 @@
             <h2>ENTRÉES</h2>
             <ul>
                 <li>
-                    <h3>Fricassée d'escargot</h3>
-                    <div class="menu-list__description">
-                        <p>au piment d'espelette</p>
-                        <p>25€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Fricassée d'escargot</h3>
+                            <div class="description">
+                                <p>au piment d'espelette</p>
+                                <p class="price">25€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Foie gras de canard mi-cuit</h3>
-                    <div class="menu-list__description">
-                        <p>Et ses copeaux de truffe noire</p>
-                        <p>35€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <div class="description">
+                                <p>Et ses copeaux de truffe noire</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Oeuf au plat</h3>
-                    <div class="menu-list__description">
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
-                        <p>20€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Oeuf au plat</h3>
+                            <div class="description">
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                <p class="price">20€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -59,25 +74,40 @@
             <h2>PLATS</h2>
             <ul>
                 <li>
-                    <h3>Filet de boeuf aux herbes</h3>
-                    <div class="menu-list__description">
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                        <p>40€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Filet de boeuf aux herbes</h3>
+                            <div class="description">
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                                <p class="price">40€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Parmentier de queue de boeuf</h3>
-                    <div class="menu-list__description">
-                        <p>À la truffe noire sur sa purée de panais</p>
-                        <p>35€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Parmentier de queue de boeuf</h3>
+                            <div class="description">
+                                <p>À la truffe noire sur sa purée de panais</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Filtet de Turbot</h3>
-                    <div class="menu-list__description">
-                        <p>aux agrumes</p>
-                        <p>44€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Filtet de Turbot</h3>
+                            <div class="description">
+                                <p>aux agrumes</p>
+                                <p class="price">44€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -85,33 +115,50 @@
             <h2>DESSERTS</h2>
             <ul>
                 <li>
-                    <h3>Paris-Brest</h3>
-                    <div class="menu-list__description">
-                        <p>Revisité</p>
-                        <p>18€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Paris-Brest</h3>
+                            <div class="description">
+                                <p>Revisité</p>
+                                <p class="price">18€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Macaron au chocolat d'exception</h3>
-                    <div class="menu-list__description">
-                        <p>Et glace à la vanille de Madagascar</p>
-                        <p>22€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Macaron au chocolat d'exception</h3>
+                            <div class="description">
+                                <p>Et glace à la vanille de Madagascar</p>
+                                <p class="price">22€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Mousse au chocolat</h3>
-                    <div class="menu-list__description">
-                        <p>Au piment d'espelette et à la truffe noire</p>
-                        <p>23€</p>
-                    </div>
+                    <a href="">
+                        <div class="menu-list__description">
+                            <h3>Mousse au chocolat</h3>
+                            <div class="description">
+                                <p>Au piment d'espelette et à la truffe noire</p>
+                                <p class="price">23€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
-        <div class="page-btn">
-            <div class="btn">
-                <p>Commander</p>
+        <a href="#">
+            <div class="page-btn">
+                <div class="btn">
+                    <p>Commander</p>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
     </div>
     <footer>
