--- a/page3.html
+++ b/page3.html
@@ -33,25 +33,40 @@
             <h2>ENTRÉES</h2>
             <ul>
                 <li>
-                    <h3>Tartare de poulpe acidulé</h3>
-                    <div class="menu-list__description">
-                        <p>aux zests d'orange</p>
-                        <p>25€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <div class="description">
+                                <p>aux zests d'orange</p>
+                                <p class="price">25€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Velouté de légumes d'antan</h3>
-                    <div class="menu-list__description">
-                        <p>Carotte, panais, topinambour</p>
-                        <p>35€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Velouté de légumes d'antan</h3>
+                            <div class="description">
+                                <p>Carotte, panais, topinambour</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Soupe à l'oignon</h3>
-                    <div class="menu-list__description">
-                        <p>Revisitée</p>
-                        <p>20€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Soupe à l'oignon</h3>
+                            <div class="description">
+                                <p>Revisitée</p>
+                                <p class="price">20€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -59,25 +74,40 @@
             <h2>PLATS</h2>
             <ul>
                 <li>
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <div class="menu-list__description">
-                        <p>Accompagnées d'une purée de panais</p>
-                        <p>40€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <div class="description">
+                                <p>Accompagnées d'une purée de panais</p>
+                                <p class="price">40€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Magret de canard</h3>
-                    <div class="menu-list__description">
-                        <p>Et parmentier de pommes de terres</p>
-                        <p>35€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Magret de canard</h3>
+                            <div class="description">
+                                <p>Et parmentier de pommes de terres</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    <div class="menu-list__description">
-                        <p>Sur son lit de gnocchis aux légumes</p>
-                        <p>44€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                            <div class="description">
+                                <p>Sur son lit de gnocchis aux légumes</p>
+                                <p class="price">44€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -85,33 +115,50 @@
             <h2>DESSERTS</h2>
             <ul>
                 <li>
-                    <h3>Pétales de violettes glacés</h3>
-                    <div class="menu-list__description">
-                        <p>Et purée de noisettes</p>
-                        <p>18€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Pétales de violettes glacés</h3>
+                            <div class="description">
+                                <p>Et purée de noisettes</p>
+                                <p class="price">18€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Fondant au chocolat</h3>
-                    <div class="menu-list__description">
-                        <p>Revisité</p>
-                        <p>22€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Fondant au chocolat</h3>
+                            <div class="description">
+                                <p>Revisité</p>
+                                <p class="price">22€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Millefeuille croustillant</h3>
-                    <div class="menu-list__description">
-                        <p>Myrtilles et pâte d'amande</p>
-                        <p>23€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Millefeuille croustillant</h3>
+                            <div class="description">
+                                <p>Myrtilles et pâte d'amande</p>
+                                <p class="price">23€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
-        <div class="page-btn">
-            <div class="btn">
-                <p>Commander</p>
+        <a href="#">
+            <div class="page-btn">
+                <div class="btn">
+                    <p>Commander</p>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
     </div>
     <footer>
