--- a/page4.html
+++ b/page4.html
@@ -33,25 +33,40 @@
             <h2>ENTRÉES</h2>
             <ul>
                 <li>
-                    <h3>Tartare de thon</h3>
-                    <div class="menu-list__description">
-                        <p>Assaisonné au yuzu</p>
-                        <p>25€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Tartare de thon</h3>
+                            <div class="description">
+                                <p>Assaisonné au yuzu</p>
+                                <p class="price">25€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Bouchée de homard croustillant</h3>
-                    <div class="menu-list__description">
-                        <p>Et sa farandole de petits légumes</p>
-                        <p>35€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Bouchée de homard croustillant</h3>
+                            <div class="description">
+                                <p>Et sa farandole de petits légumes</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Velouté de cèpes</h3>
-                    <div class="menu-list__description">
-                        <p>Aux truffes</p>
-                        <p>20€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Velouté de cèpes</h3>
+                            <div class="description">
+                                <p>Aux truffes</p>
+                                <p class="price">20€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -59,25 +74,40 @@
             <h2>PLATS</h2>
             <ul>
                 <li>
-                    <h3>Poulet rôti aux herbes de provence</h3>
-                    <div class="menu-list__description">
-                        <p>Et sa crème de truffe</p>
-                        <p>40€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Poulet rôti aux herbes de provence</h3>
+                            <div class="description">
+                                <p>Et sa crème de truffe</p>
+                                <p class="price">40€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Langouste rôtie</h3>
-                    <div class="menu-list__description">
-                        <p>Et ses légumes de saison</p>
-                        <p>35€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Langouste rôtie</h3>
+                            <div class="description">
+                                <p>Et ses légumes de saison</p>
+                                <p class="price">35€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Côte de boeuf angus</h3>
-                    <div class="menu-list__description">
-                        <p>Et sa purée de panais</p>
-                        <p>44€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Côte de boeuf angus</h3>
+                            <div class="description">
+                                <p>Et sa purée de panais</p>
+                                <p class="price">44€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -85,33 +115,50 @@
             <h2>DESSERTS</h2>
             <ul>
                 <li>
-                    <h3>Farandole de desserts</h3>
-                    <div class="menu-list__description">
-                        <p>Du chef</p>
-                        <p>18€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Farandole de desserts</h3>
+                            <div class="description">
+                                <p>Du chef</p>
+                                <p class="price">18€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Crème brulée</h3>
-                    <div class="menu-list__description">
-                        <p>Revisitée</p>
-                        <p>22€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Crème brulée</h3>
+                            <div class="description">
+                                <p>Revisitée</p>
+                                <p class="price">22€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
                 <li>
-                    <h3>Tiramisu</h3>
-                    <div class="menu-list__description">
-                        <p>à la noisette</p>
-                        <p>23€</p>
-                    </div>
+                    <a>
+                        <div class="menu-list__description">
+                            <h3>Tiramisu</h3>
+                            <div class="description">
+                                <p>à la noisette</p>
+                                <p class="price">23€</p>
+                            </div>
+                        </div>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </a>
                 </li>
             </ul>
         </div>
-        <div class="page-btn">
-            <div class="btn">
-                <p>Commander</p>
+        <a href="#">
+            <div class="page-btn">
+                <div class="btn">
+                    <p>Commander</p>
+                </div>
             </div>
-        </div>
+        </a>
     </div> 
     </div>
     <footer>
