--- a/index.html
+++ b/index.html
@@ -38,21 +38,15 @@
         <h2>Fonctionnement</h2>
         <ol>
             <li>
-                <div class="functioning-filter--icon">
-                    <i class="fas fa-mobile-alt fa-1.5x"></i>
-                </div>
+                <i class="fas fa-mobile-alt"></i>
                 <p>Choisissez un restaurant</p>
             </li>
             <li>
-                <div class="functioning-filter--icon">
-                    <i class="fas fa-list-ul"></i>
-                </div>
+                <i class="fas fa-list-ul"></i>
                 <p>Composez votre menu</p>
             </li>
             <li>
-                <div class="functioning-filter--icon">
-                    <i class="fas fa-store"></i>
-                </div>
+                <i class="fas fa-store"></i>
                 <p>Dégustez au restaurant</p>
             </li>
         </ol>
@@ -72,8 +66,8 @@
                             </div>
                         </a>
                         <div class="heart-icon">
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
+                            <i class="far fa-heart heart-empty"></i>
+                            <i class="fas fa-heart heart-full"></i>
                         </div>
                     </div>
                 </div>
@@ -87,8 +81,8 @@
                         </div>
                     </a>
                     <div class="heart-icon">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <i class="far fa-heart heart-empty"></i>
+                        <i class="fas fa-heart heart-full"></i>
                     </div>
                 </div>
             </div>
@@ -103,8 +97,8 @@
                             </div>
                         </a>
                         <div class="heart-icon">
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
+                            <i class="far fa-heart heart-empty"></i>
+                            <i class="fas fa-heart heart-full"></i>
                         </div>
                     </div>
                 </div>
@@ -118,8 +112,8 @@
                         </div>
                     </a>
                     <div class="heart-icon">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <i class="far fa-heart heart-empty"></i>
+                        <i class="fas fa-heart heart-full"></i>
                     </div>
                 </div>
             </div>
