--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="flex-home-desktop-tablet">
         <div class="localisation">
             <i class="fas fa-map-marker-alt"></i>
-            <p>Paris, Belleville</p>
+            <input class="search" type="text" placeholder="Paris, Belleville" />
         </div>
         <div class="home">
             <div class="title-part-1">Réservez le menu qui</div>
