--- a/index.html
+++ b/index.html
@@ -17,26 +17,23 @@
     <div class="loader">
         Bienvenue
     </div>
+
     <header>
         <img src="public/img/ohmyfood.png" alt="logo oh my food" />
     </header>
-    <div class="flex-home-desktop-tablet">
+
+    <form>
         <div class="localisation">
             <i class="fas fa-map-marker-alt"></i>
             <input class="search" type="text" placeholder="Paris, Belleville" />
         </div>
-        <div class="home">
-            <div class="title-part-1">Réservez le menu qui</div>
-            <div class="title-part-2">vous convient</div>
-            <p>Découvrez des restaurants d'exception,</p>
-            <p>sélectionnés par nos soins</p>
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             <div class="home-btn">
-                    <div class="btn">
-                        <p>Explorer nos restaurants</p>
-                    </div>
+                <input class="btn" type="submit" value="Explorer nos restaurants" />
             </div>
-        </div>
-    </div>
+    </form>
+
     <div class="functioning-filter">
         <h2>Fonctionnement</h2>
         <ol>
