--- a/page2.html
+++ b/page2.html
@@ -146,13 +146,9 @@
                     </li>
                 </ul>
             </div>
-            <a href="#">
-                <div class="page-btn">
-                    <div class="btn">
-                        <p>Commander</p>
-                    </div>
-                </div>
-            </a>
+            <div class="page-btn">
+                <input class="btn" type="submit" Value="Commander">
+            </div>
         </div>
     </div>
     <footer>
