--- a/page2.html
+++ b/page2.html
@@ -27,8 +27,9 @@
         <div class="menu--background">
             <div class="menu__description">
                 <h1>La note enchantée</h1>
-                <div class="menu__description heart--size">
-                    <i class="far fa-heart"></i>
+                <div class="heart-menu">
+                    <i class="far fa-heart heart-empty"></i>
+                    <i class="fas fa-heart heart-full"></i>
                 </div>
             </div>
             <div class="menu-list">
