--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    <div class="loader">
-        Bienvenue
+    <div class="background-loader">
+        <div class="loader">
+            <div class="welcome">Bienvenue</div>
+        </div>
     </div>
 
     <header>
@@ -27,11 +29,11 @@
             <i class="fas fa-map-marker-alt"></i>
             <input class="search" type="text" placeholder="Paris, Belleville" />
         </div>
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <div class="home-btn">
-                <input class="btn" type="submit" value="Explorer nos restaurants" />
-            </div>
+        <h1>Réservez le menu qui vous convient</h1>
+        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+        <div class="home-btn">
+            <input class="btn" type="submit" value="Explorer nos restaurants" />
+        </div>
     </form>
 
     <div class="functioning-filter">
