--- a/page1.html
+++ b/page1.html
@@ -67,7 +67,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="menu-list">
+            <div class="menu-list menu-plats">
                 <h2>PLATS</h2>
                 <ul>
                     <li class="parent">
@@ -102,7 +102,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="menu-list">
+            <div class="menu-list menu-desserts">
                 <h2>DESSERTS</h2>
                 <ul>
                     <li class="parent">
