--- a/page2.html
+++ b/page2.html
@@ -77,7 +77,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="menu-list">
+            <div class="menu-list menu-plats">
                 <h2>PLATS</h2>
                 <ul>
                     <li class="parent">
@@ -112,7 +112,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="menu-list">
+            <div class="menu-list menu-desserts">
                 <h2>DESSERTS</h2>
                 <ul>
                     <li class="parent">
