résolution pb loader

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
         <div class="home-btn">
-            <input class="btn" type="submit" value="Explorer nos restaurants" />
+            <input class="btn" type="button" value="Explorer nos restaurants" />
         </div>
     </form>
 
