--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="menu-list">
-                <h2>ENTRÉES</h2>
+                <h2><span class="border">ENTR</span>ÉES</h2>
                 <ul>
                     <li class="parent">
                         <div class="menu-list__description">
@@ -78,7 +78,7 @@
                 </ul>
             </div>
             <div class="menu-list menu-plats">
-                <h2>PLATS</h2>
+                <h2><span class="border">PLAT</span>S</h2>
                 <ul>
                     <li class="parent">
                         <div class="menu-list__description">
@@ -113,7 +113,7 @@
                 </ul>
             </div>
             <div class="menu-list menu-desserts">
-                <h2>DESSERTS</h2>
+                <h2><span class="border">DESS</span>ERTS</h2>
                 <ul>
                     <li class="parent">
                         <div class="menu-list__description">
